# mcc

./: .gitignore  Cargo.toml
appdata/.minecraft/: launcher_profiles.json
env/: .ini
src/: main.rs
src/deserialize/: mcc_toml.rs  mod.rs  profiles_json.rs
src/logic/: cache_temp.rs  mod.rs  profile_management.rs
src/ui/: mod.rs
src/ui/components/: list_item.rs  mod.rs  state_full_list.rs
src/ui/interfaces/: main_interface.rs  mod.rs  profile_interface.rs  settings_interface.rs
src/utils/: console_log.rs  mod.rs
