[package]
name = "mcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
mclr = "=2.0.0-b"
tui = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.13"
serde_json = "1.0.117"
serde_derive = "1.0"
lazy_static = "1.4.0"
once_cell = "1.10.0"
ctrlc = "3.4.4"
uuid = { version = "1.8.0", features = ["v4"] }
config = "0.14.0"
whoami = "1.5.1"